-----------------------------------------------------------------------------------------
Data Crow version 4.7.0                                            Released on 2023-03-xx
-----------------------------------------------------------------------------------------

[New]
- Archive.org software online book, software and movie search.
- Open Library (openlibrary.org) online book search.
- Added a new Look and Feel: FlatLaf Light. This is a more modern Look and Feel which is
  still actively developed (https://www.formdev.com/flatlaf/)
  This will be the default Look and Feel for Data Crow from now on (for new installations).
  Find it in Settings > Look and Feel

[Changed]
- Now allowing for references to be made to main modules without removing the referenced
  module from the module menu.
  (https://datacrow.org/2023/02/17/relating-items-what-data-crow-4-7-will-bring-to-you/)
- Now allowing users to alter a module to create a reference to the module itself; 
  allowing for, for example, a field called related software item on a software item.
- Hierarchy view for containers will now show all items per container + the items of 
  children of the selected container.
- Small performance increase for the MobyGames.com search.
- Added two new fields to the Book module: translated from & original title
- Small changes to the overall layout; update the module selection bar, removed line around
  the main menu, increased spacing for many of the components.
- Better spacing of long texts in the quick view.
- Icon size can now be changed: Settings > Look and Feel > Icon Size
  Note that currently all icons as part of the Data Crow data are stored at a size of 16x16.
  If you change an icon it will be stored at 512x512 (if the original size allows for it)
  so it can adjust to any selected icon size.
- Selecting clear for the online search will now only clear the results, not the search
  terms.
- Look and Feel: removed CDE/Motif and Windows Classic.
  
[Fixed]