@@ -823,7 +823,7 @@ public class ItemForm extends DcFrame implements ActionListener, IClient {
                 if (component instanceof DcCheckBox)
                     ((DcCheckBox) component).setText("");
 
-                space = 5; 
+                space = 4; 
                 panel.add(label,     Layout.getGBC(0, y, 1, 1, 1.0, 1.0
                         ,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE,
                          new Insets(space, 2, 2, 5), 0, 0));
